whole fs course up until now

--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -26,6 +26,8 @@ activate server
 server-->>spa.js: JSON-data
 deactivate server
 
+spa.js-->>browser: render DOM
+
 browser->>server: GET https://studies.cs.helsinki.fi/favicon.ico
 activate server
 server-->>browser: 404 Not Found
